test(Lotto): 불변 리스트 문제 해결
- 가변 리스트로 변경